--- a/users_service/src/frontend/index.html
+++ b/users_service/src/frontend/index.html
@@ -55,12 +55,33 @@
                         </div>
                     </form>
                 </div>
+               
+
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
                     <button type="button" class="btn btn-primary" id="saveChangesBtn">Guardar cambios</button>
                 </div>
             </div>
         </div>
+    </div>
+ <!-- Modal para ver los comentarios -->
+    <div class="modal" tabindex="-1" role="dialog" id="viewCommentsModal">
+      <div class="modal-dialog" role="document">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title">Comentarios del Usuario</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                  </button>
+              </div>
+              <div class="modal-body" id="commentsContainer">
+                  <!-- Aquí se cargarán los comentarios -->
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+              </div>
+          </div>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
